--- a/index.html
+++ b/index.html
@@ -573,6 +573,45 @@
                 />
             </div>
         </div>
+
+        <!-- CS 370 ---->
+        <div class="flex flex-col md:flex-row justify-between items-start mb-12">
+            <div class="md:w-2/3">
+                <h3 class="text-2xl mb-2 lowercase">
+                    <a
+                        href="https://uwflow.com/course/cs370"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="hover:underline"
+                    >
+                        CS 370
+                    </a>
+                </h3>
+                <p class="mb-2 lowercase">
+                    w Professor Leili Rafiee Sevyeri
+                </p>
+                <p class="italic text-gray-500 lowercase">
+                    <a
+                        href="notes/CS370 - 2025W.pdf"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="hover:underline"
+                    >
+                        [notes]
+                    </a>
+                </p>
+            </div>
+            <div class="mt-6 md:mt-0 md:text-right">
+                <span class="block text-gray-500 mb-2 lowercase text-sm">
+                    2025 Winter
+                </span>
+                <img
+                    src="img/cat12.gif"
+                    alt="logo"
+                    class="w-200 h-20 object-contain mx-auto md:mx-0"
+                />
+            </div>
+        </div>
     </section>
 
     <!-- Other -->
